--- a/projects/front-components/src/lib/components/status-icon/status-icon.component.html
+++ b/projects/front-components/src/lib/components/status-icon/status-icon.component.html
@@ -1,12 +1,12 @@
 <div
-	class="ss-lib-hint"
+	class="status-icon"
 	tabindex="0"
 	(mouseleave)="isHover.set(false)"
 	(mouseenter)="isHover.set(true)"
 >
 	<ss-lib-icon
 		[icon]="icon()"
-		[color]="color()"
+		[color]="iconColor()"
 		[width]="'16'"
 		[height]="'16'"
 	></ss-lib-icon>
