--- a/projects/front-components/src/lib/components/status-icon/status-icon.component.scss
+++ b/projects/front-components/src/lib/components/status-icon/status-icon.component.scss
@@ -1,4 +1,4 @@
-.ss-lib-hint:focus-visible {
+.status-icon:focus-visible {
 	outline: none;
 	box-shadow: var(--focus-rings-focus-ring);
 	border-radius: 4px;
