--- a/projects/front-components/src/lib/components/form-field/form-field.component.html
+++ b/projects/front-components/src/lib/components/form-field/form-field.component.html
@@ -58,7 +58,7 @@
 				</div>
 			</div>
 			@if (currentFieldCtrlState() !== ControlState.Invalid) {
-				<ss-lib-hint
+				<ss-lib-status-icon
 					*ngIf="tooltipInfoText()"
 					ss-lib-tooltip
 					[tooltipText]="tooltipInfoText()"
@@ -68,11 +68,11 @@
 
 			@if (showValidationFieldIcon()) {
 				<div class="field-container__error-icon">
-					<ss-lib-hint
+					<ss-lib-status-icon
 						ss-lib-tooltip
 						[tooltipText]="errorText()"
 						[icon]="IconType.Alert"
-						[type]="HelpHintType.Error"
+						[type]="statusIconType.Error"
 					/>
 				</div>
 			}
