--- a/projects/front-components/src/lib/components/right-side-page-popup/right-side-page-popup.component.html
+++ b/projects/front-components/src/lib/components/right-side-page-popup/right-side-page-popup.component.html
@@ -1,12 +1,12 @@
 <div class="ss-lib-right-side-page-popup">
 	<div class="ss-lib-right-side-page-popup__header">
-		<ss-lib-badge-info
+		<ss-lib-dialog-header
 			[title]="titleHeader()"
 			[description]="descriptionHeader()"
 			[badge]="badgeProps()"
 			[closePosition]="closePosition()"
 			(closeEvent)="onCloseEvent()"
-		></ss-lib-badge-info>
+		></ss-lib-dialog-header>
 	</div>
 	<ss-lib-divider
 		*ngIf="contentRef()"
