--- a/projects/front-components/src/lib/components/tab/tab.component.scss
+++ b/projects/front-components/src/lib/components/tab/tab.component.scss
@@ -4,7 +4,7 @@
 
 .ss-lib-tab {
 	display: flex;
-	padding: 14px 4px 0 4px;
+	padding: 0 4px 12px;
 	cursor: pointer;
 	position: relative;
 	align-items: flex-start;
@@ -18,18 +18,25 @@
 		gap: 6px;
 	}
 
+	&__label {
+		display: flex;
+		align-items: center;
+		gap: 4px;
+	}
+
 	&--disabled {
 		cursor: default;
 	}
 
-	&__active-indicator {
-		width: 100%;
-		height: 2px;
-		background-color: var(--icon-information);
-		border-radius: 9999px;
+	&--active:after {
+		content: '';
 		position: absolute;
 		bottom: -1px;
-		z-index: 2;
+		left: 0;
+		right: 0;
+		height: 2px;
+		background: var(--icon-information);
+		border-radius: var(--border-radius-round);
 	}
 
 	&:focus-visible {
