--- a/projects/front-components/src/lib/components/calendar/components/calendar-controls/calendar-controls.component.html
+++ b/projects/front-components/src/lib/components/calendar/components/calendar-controls/calendar-controls.component.html
@@ -1,7 +1,7 @@
 <div class="datepicker-controls">
 	<ss-lib-button
 		[type]="ButtonType.Ghost"
-		[size]="ExtraSize.xs"
+		[size]="ExtraSize.sm"
 		[icon]="IconType.ChevronLeftDouble"
 		[iconPosition]="IconPosition.OnlyIcon"
 		[disabled]="value() | mapper: isYearDisabled : Extremum.Min"
@@ -10,7 +10,7 @@
 
 	<ss-lib-button
 		[type]="ButtonType.Ghost"
-		[size]="ExtraSize.xs"
+		[size]="ExtraSize.sm"
 		[icon]="IconType.ChevronLeft"
 		[iconPosition]="IconPosition.OnlyIcon"
 		[disabled]="value() | mapper: isMonthDisabled : Extremum.Min"
@@ -20,7 +20,7 @@
 	<div class="select-year">
 		<ss-lib-button
 			[type]="ButtonType.Ghost"
-			[size]="ExtraSize.xs"
+			[size]="ExtraSize.sm"
 			[text]="value().formattedMonthYear"
 			[icon]="switchYearIcon()"
 			[iconPosition]="IconPosition.End"
@@ -30,7 +30,7 @@
 
 	<ss-lib-button
 		[type]="ButtonType.Ghost"
-		[size]="ExtraSize.xs"
+		[size]="ExtraSize.sm"
 		[icon]="IconType.ChevronRight"
 		[iconPosition]="IconPosition.OnlyIcon"
 		[disabled]="value() | mapper: isMonthDisabled : Extremum.Max"
@@ -39,7 +39,7 @@
 
 	<ss-lib-button
 		[type]="ButtonType.Ghost"
-		[size]="ExtraSize.xs"
+		[size]="ExtraSize.sm"
 		[icon]="IconType.ChevronRightDouble"
 		[iconPosition]="IconPosition.OnlyIcon"
 		[disabled]="value() | mapper: isYearDisabled : Extremum.Max"
