--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -1284,11 +1284,13 @@
 		<p class="section-description">Tab navigation with custom actions.</p>
 
 		<div class="spaced">
-			<ss-lib-tabs
-				[tabs]="tabs"
-				[activeTabIndex]="indexTab"
-				(changeIndexEmit)="changeTab($event)"
-			></ss-lib-tabs>
+			<div [style.borderBottom]="'1px solid var(--border-primary)'">
+				<ss-lib-tabs
+					[tabs]="tabs"
+					[activeTabIndex]="indexTab"
+					(changeIndexEmit)="changeTab($event)"
+				></ss-lib-tabs>
+			</div>
 		</div>
 
 		<div>Выбрана вкладка: {{ indexTab + 1 }}</div>
