--- a/projects/front-components/src/lib/components/tooltip/tooltip.component.scss
+++ b/projects/front-components/src/lib/components/tooltip/tooltip.component.scss
@@ -9,7 +9,7 @@ $verticalArrowOffset: 8px;
 	border-radius: var(--border-radius-md);
 	padding: 8px 12px;
 	opacity: 0;
-	background: var(--surface-tetriary);
+	background: var(--surface-tertiary);
 	box-shadow:
 		0 2px 2px -1px #0a0d120a,
 		0 4px 6px -2px #0a0d1208,
@@ -18,7 +18,7 @@ $verticalArrowOffset: 8px;
 	outline: 1px solid var(--border-tertiary);
 
 
-	//TODO: заменить цвета на токены --surface-tetriary и --border-tertiary в svg
+	//TODO: заменить цвета на токены --surface-tertiary и --border-tertiary в svg
 	&::before {
 		content: '';
 		position: absolute;
