--- a/projects/front-components/src/lib/components/tab/tab.component.scss
+++ b/projects/front-components/src/lib/components/tab/tab.component.scss
@@ -1,12 +1,14 @@
 :host {
 	position: relative;
+
+	&:not(:has(.ss-lib-tab--disabled)) {
+		cursor: pointer;
+	}
 }
 
 .ss-lib-tab {
 	display: flex;
-	padding: 0 4px 12px;
-	cursor: pointer;
-	position: relative;
+	padding: 0 4px;
 	align-items: flex-start;
 	justify-content: center;
 	border-radius: 2px;
@@ -24,10 +26,6 @@
 		gap: 4px;
 	}
 
-	&--disabled {
-		cursor: default;
-	}
-
 	&--active:after {
 		content: '';
 		position: absolute;
@@ -40,6 +38,7 @@
 	}
 
 	&:focus-visible {
+		height: 100%;
 		outline: none;
 		box-shadow: var(--focus-rings-focus-ring);
 	}
