--- a/projects/front-components/src/lib/components/tabs/tabs.component.html
+++ b/projects/front-components/src/lib/components/tabs/tabs.component.html
@@ -1,4 +1,7 @@
-<div class="ss-lib-tabs">
+<div
+	class="ss-lib-tabs"
+	[style.height.px]="height()"
+>
 	<div
 		#tabsBlock
 		class="ss-lib-tabs__block"
