--- a/projects/front-components/src/lib/components/tab/tab.component.scss
+++ b/projects/front-components/src/lib/components/tab/tab.component.scss
@@ -37,9 +37,13 @@
 		border-radius: var(--border-radius-round);
 	}
 
-	&:focus-visible {
+	&:not(&--disabled):focus-visible {
 		height: 100%;
 		outline: none;
 		box-shadow: var(--focus-rings-focus-ring);
+	}
+
+	&--disabled:focus-visible {
+		outline: none;
 	}
 }
