--- a/projects/front-components/src/lib/components/confirm-modal/confirm-modal.component.html
+++ b/projects/front-components/src/lib/components/confirm-modal/confirm-modal.component.html
@@ -11,6 +11,7 @@
 	[descriptionHeader]="descriptionHeader"
 	[badgeProps]="badgeProps"
 	[actionsRef]="actionsRef"
+	[paddingContent]="'24px'"
 	(closeEmit)="close()"
 >
 </ss-lib-modal>
