--- a/projects/test-app/src/app/test-modal/test-modal.component.html
+++ b/projects/test-app/src/app/test-modal/test-modal.component.html
@@ -10,6 +10,7 @@
 	[actionsRef]="actions"
 	[contentRef]="contentRef"
 	[stickyRef]="stickyRef"
+	[paddingContent]="'12px 24px 32px 24px'"
 	(closeEmit)="close()"
 >
 </ss-lib-modal>
