--- a/projects/front-components/src/lib/components/dialog-header/dialog-header.component.scss
+++ b/projects/front-components/src/lib/components/dialog-header/dialog-header.component.scss
@@ -9,9 +9,9 @@
 	}
 
 	&__close {
-		position: relative;
-		left: 8px;
-		bottom: 8px;
+		position: absolute;
+		right: 12px;
+		top: 12px;
 	}
 
 	&__info {
