feature/3916-lib-components: fix controls

--- a/projects/front-components/src/lib/components/calendar/components/calendar-sheet/calendar-sheet.component.html
+++ b/projects/front-components/src/lib/components/calendar/components/calendar-sheet/calendar-sheet.component.html
@@ -3,6 +3,7 @@
 		[type]="ButtonType.Secondary"
 		[text]="todayLabel"
 		[disabled]="itemIsDisabled(CalendarDay.currentLocal())"
+		[size]="ExtraSize.lg"
 		(click)="setToday()"
 	/>
 
