--- a/projects/front-components/src/lib/components/calendar/components/calendar-year/calendar-year.component.html
+++ b/projects/front-components/src/lib/components/calendar/components/calendar-year/calendar-year.component.html
@@ -20,6 +20,7 @@
 						<ss-lib-calendar-cell
 							[displayValue]="monthShortName"
 							[item]="item"
+							[isActive]="itemIsActive(item)"
 							[isToday]="itemIsToday(item)"
 							(click)="onItemClick(item)"
 						/>
