--- a/projects/front-components/src/lib/components/dropdown/dropdown-list/dropdown-list.component.html
+++ b/projects/front-components/src/lib/components/dropdown/dropdown-list/dropdown-list.component.html
@@ -6,10 +6,13 @@
 	>
 		<ss-lib-scrollbar>
 			@if (headerTemplateRef()) {
-				<ng-container
-					[ngTemplateOutlet]="headerTemplateRef()"
-				></ng-container>
-				<ss-lib-divider />
+				<div class="dropdown__options_header">
+					<ng-container
+						[ngTemplateOutlet]="headerTemplateRef()"
+					></ng-container>
+
+					<ss-lib-divider />
+				</div>
 			}
 
 			<ng-content></ng-content>
