--- a/projects/front-components/src/lib/components/dropdown/dropdown-list/dropdown-list.component.scss
+++ b/projects/front-components/src/lib/components/dropdown/dropdown-list/dropdown-list.component.scss
@@ -11,6 +11,10 @@
 	box-shadow: var(--shadow-xl);
 	position: relative;
 
+	&_header{
+		padding-bottom: 4px;
+	}
+
 	ss-lib-divider {
 		padding: 4px 0;
 	}
