--- a/projects/front-components/src/lib/components/otp-input/otp-input.component.scss
+++ b/projects/front-components/src/lib/components/otp-input/otp-input.component.scss
@@ -6,6 +6,7 @@
 
 	--app-custom-input-font-size: var(--font-size-heading-xs);
 	--app-custom-input-line-height: var(--line-height-heading-xs);
+	--app-custom-field-container-padding: 6px 12px;
 
 	&__label {
 		display: flex;
