--- a/projects/front-components/src/lib/components/input/input.component.scss
+++ b/projects/front-components/src/lib/components/input/input.component.scss
@@ -7,34 +7,33 @@
 	background: transparent;
 	height: auto;
 	flex-wrap: nowrap;
-	gap: 8px;
-
-	&.size-md {
-		height: 20px;
-
-		.input-field {
-			font-size: var(--font-size-body-sm);
-		}
-	}
-	&.size-lg {
-		height: 24px;
-	}
 }
 
 .input-field {
 	flex: 1;
 	width: 100%;
 	font-family: var(--type-font-family-body), serif;
-	font-size: var(--app-custom-input-font-size, var(--font-size-body-md));
-	line-height: var(
-		--app-custom-input-line-height,
-		var(--line-height-body-md)
-	);
 	color: inherit;
 	border: none;
 	outline: none;
-	padding: 0;
+	padding: 4px 0;
 	background: transparent;
+
+	&.size-md {
+		font-size: var(--app-custom-input-font-size, var(--font-size-body-sm));
+		line-height: var(
+			--app-custom-input-line-height,
+			var(--line-height-body-sm)
+		);
+	}
+
+	&.size-lg {
+		font-size: var(--app-custom-input-font-size, var(--font-size-body-md));
+		line-height: var(
+			--app-custom-input-line-height,
+			var(--line-height-body-md)
+		);
+	}
 }
 
 .input-field::placeholder {
