--- a/projects/front-components/src/lib/components/textarea/textarea.component.scss
+++ b/projects/front-components/src/lib/components/textarea/textarea.component.scss
@@ -2,6 +2,7 @@
 	&__field-container {
 		position: relative;
 		width: 100%;
+		overflow: hidden;
 	}
 
 	&__pseudo {
@@ -23,14 +24,17 @@
 		outline: none;
 		margin: 0;
 		border: 0;
-		padding: 10px 16px 10px 14px;
 	}
 
 	&__pseudo,
 	&__field {
+		overflow-wrap: break-word;
+		word-break: break-word;
+		white-space: pre-wrap;
 		font-family: var(--type-font-family-body), serif;
 		font-size: var(--font-size-body-md);
 		font-weight: var(--type-font-weight-regular);
+		padding-right: 16px;
 	}
 
 	&__resize-icon {
