--- a/projects/test-app/src/app/stand/stand.component.scss
+++ b/projects/test-app/src/app/stand/stand.component.scss
@@ -1,14 +1,14 @@
 .container {
 	max-width: 1200px;
 	margin: 0 auto;
-	padding: 20px;
+	padding: 0 20px 20px;
 	font-family: var(--type-font-family-body), serif;
 }
 
 .section {
-	background-color: #fff;
+	background-color: var(--surface-page);
 	border-radius: 8px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	box-shadow: var(--shadow-xl);
 	padding: 24px;
 	margin-bottom: 24px;
 }
@@ -16,13 +16,13 @@
 .section-title {
 	font-size: 24px;
 	font-weight: 600;
-	color: #1a1a1a;
+	color: var(--text-body);
 	margin-bottom: 16px;
 }
 
 .section-description {
 	font-size: 16px;
-	color: #666;
+	color: var(--text-body-3);
 	margin-bottom: 16px;
 }
 
@@ -60,6 +60,19 @@
 
 .component-row > * {
 	flex: 0 0 auto;
+}
+
+.two-columns {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 24px;
+}
+
+.component-column {
+	display: flex;
+	flex-direction: column;
+	flex: 1 1 300px;
+	gap: 12px;
 }
 
 .icon-wrapper {
@@ -112,8 +125,35 @@
 	.sub-section-title {
 		font-size: 16px;
 	}
+
+	.two-columns {
+		flex-direction: column;
+	}
 }
 
+
+.avatar-test {
+	display: flex;
+	justify-content: space-between;
+	gap: 12px;
+	padding: 12px 16px;
+
+	&__label {
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+.scrollbar-test {
+	height: 150px;
+	width: 150px;
+	display: flex;
+	flex-wrap: nowrap;
+
+	&__item {
+		white-space: nowrap;
+	}
+}
 
 //.spinners {
 //	width: 200px;
@@ -137,17 +177,7 @@
 //	justify-content: center;
 //}
 //
-//.avatar-tmp {
-//	display: flex;
-//	justify-content: space-between;
-//	gap: 12px;
-//	padding: 12px 16px;
-//
-//	&__label {
-//		display: flex;
-//		flex-direction: column;
-//	}
-//}
+
 //
 //.divider-block {
 //	padding: 4px 0;
@@ -174,16 +204,6 @@
 //	justify-content: center;
 //}
 //
-//.scrollbar-test {
-//	height: 150px;
-//	width: 150px;
-//	display: flex;
-//	flex-wrap: nowrap;
-//
-//	&__item {
-//		white-space: nowrap;
-//	}
-//}
 //
 //.checkbox {
 //	display: flex;
