--- a/projects/front-components/src/lib/components/number-picker/number-picker.component.scss
+++ b/projects/front-components/src/lib/components/number-picker/number-picker.component.scss
@@ -1,6 +1,6 @@
 .number-picker-wrapper {
 	--shadow-xs-number-picker: var(--shadow-xs);
-	--app-custom-input-line-height: normal;
+	--app-custom-field-container-padding: 6px 12px;
 }
 
 .number-picker {
