--- a/projects/front-components/src/lib/components/select/select.component.html
+++ b/projects/front-components/src/lib/components/select/select.component.html
@@ -1,7 +1,4 @@
-<div
-	tabindex="0"
-	class="select__container"
->
+<div class="select__container">
 	<div class="select__body">
 		<div class="select__field">
 			<ss-lib-input
