--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -1429,7 +1429,7 @@
 						[tooltipInfoText]="'Какой то тултип'"
 						[showValidationFieldIcon]="true"
 						[clearButton]="true"
-						[icon]="IconType.Bell"
+						[icon]="IconType.Search"
 						[size]="ExtraSize.md"
 					>
 						<ss-lib-input
@@ -1524,7 +1524,7 @@
 						[tooltipInfoText]="'Какой то тултип'"
 						[showValidationFieldIcon]="true"
 						[clearButton]="true"
-						[icon]="IconType.Bell"
+						[icon]="IconType.Search"
 						[size]="ExtraSize.lg"
 					>
 						<ss-lib-input
