--- a/projects/front-components/src/lib/components/empty-state/empty-state.component.html
+++ b/projects/front-components/src/lib/components/empty-state/empty-state.component.html
@@ -1,39 +1,29 @@
 <div class="ss-lib-empty-state">
-	<div class="ss-lib-empty-state__header">
-		<ss-lib-text
-			[type]="TextType.BodyLg"
-			[weight]="TextWeight.Semibold"
-			>{{ headerTitle() }}</ss-lib-text
-		>
-		<ng-container *ngTemplateOutlet="actionRef()"></ng-container>
-	</div>
-
-	<ss-lib-divider></ss-lib-divider>
-
 	<div class="ss-lib-empty-state__body">
 		<div class="ss-lib-empty-state__content-body">
-			<ss-lib-badge
-				[badgeProps]="{
-					size: ExtraSize.xl,
-					icon: icon(),
-				}"
-			/>
-			<div class="ss-lib-empty-state__body-text">
+			<ss-lib-badge [badgeProps]="badge()" />
+
+			<div class="ss-lib-empty-state__content-text">
 				<ss-lib-text
 					[type]="TextType.BodyXl"
 					[weight]="TextWeight.Semibold"
 					[align]="Align.Center"
-					>{{ title() }}</ss-lib-text
-				>
-				<ss-lib-text
-					*ngIf="description()"
-					[type]="TextType.BodyMd"
-					[weight]="TextWeight.Regular"
-					[align]="Align.Center"
-					>{{ description() }}
+					[color]="Colors.TextBody"
+					>{{ title() }}
 				</ss-lib-text>
+
+				@if (description()) {
+					<ss-lib-text
+						[type]="TextType.BodyMd"
+						[weight]="TextWeight.Regular"
+						[align]="Align.Center"
+						[color]="Colors.TextBody3"
+						>{{ description() }}
+					</ss-lib-text>
+				}
 			</div>
 		</div>
-		<ng-container *ngTemplateOutlet="actionRef()"></ng-container>
+
+		<ng-content></ng-content>
 	</div>
 </div>
