--- a/projects/front-components/src/lib/components/scrollbar/scrollbar.component.scss
+++ b/projects/front-components/src/lib/components/scrollbar/scrollbar.component.scss
@@ -44,11 +44,11 @@
 	}
 
 	&_has-horizontal {
-		bottom: 8px;
+		bottom: 4px;
 	}
 
 	&_has-vertical {
-		right: 8px;
+		right: 4px;
 	}
 }
 
@@ -64,7 +64,7 @@
 
 	.bar_vertical & {
 		right: 0;
-		width: 8px;
+		width: 4px;
 		min-height: 24px;
 		transition: width 0.3s ease-in-out;
 		margin: 0 4px;
@@ -72,12 +72,16 @@
 
 	.bar_horizontal & {
 		bottom: 0;
-		height: 8px;
+		height: 4px;
 		min-width: 24px;
+		transition: height 0.3s ease-in-out;
 	}
 
-	.bar_vertical:hover &,
+	.bar_vertical:hover & {
+		width: 10px;
+	}
+
 	.bar_horizontal:hover & {
-		width: 12px;
+		height: 10px;
 	}
 }
