feature/3916-lib-components: fix skeleton

--- a/projects/front-components/src/lib/components/avatar/avatar.component.scss
+++ b/projects/front-components/src/lib/components/avatar/avatar.component.scss
@@ -1,10 +1,10 @@
 :host {
 	display: flex;
 	align-items: center;
+	max-width: fit-content;
 }
 
 .avatar {
-
 	position: relative;
 	display: flex;
 	align-items: center;
