--- a/projects/test-app/src/app/layout/layout.component.html
+++ b/projects/test-app/src/app/layout/layout.component.html
@@ -14,11 +14,12 @@
 			[width]="'60'"
 			[height]="'32'"
 		></ss-lib-icon>
+
 		<ss-lib-text
 			[type]="TextType.BodyMd"
 			[weight]="TextWeight.Semibold"
-			>Библиотека компонентов</ss-lib-text
-		>
+			>Библиотека компонентов
+		</ss-lib-text>
 	</div>
 </ng-template>
 
