--- a/projects/front-components/src/lib/components/skeleton/skeleton-block/skeleton-block.component.scss
+++ b/projects/front-components/src/lib/components/skeleton/skeleton-block/skeleton-block.component.scss
@@ -1,15 +1,7 @@
-.ss-lib-skeleton-block {
+:host {
 	background-color: var(--border-primary);
 	overflow: hidden;
 	position: relative;
-
-	&__round {
-		border-radius: 100%;
-	}
-
-	&__square {
-		border-radius: 8px;
-	}
 
 	&:after {
 		display: block;
@@ -17,20 +9,17 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background: var(--border-secondary);
-		animation-duration: 1s;
-		animation-direction: alternate;
-		animation-iteration-count: infinite;
-		animation-name: pulse;
-		animation-timing-function: steps(10, end);
+		background: var(--border-primary);
+		animation: shimmer 800ms ease-in-out infinite alternate;
+		animation-delay: 200ms;
 	}
 }
 
-@keyframes pulse {
+@keyframes shimmer {
 	0% {
-		opacity: 0;
+		background-color: var(--border-primary);
 	}
 	100% {
-		opacity: 1;
+		background-color: var(--border-secondary);
 	}
 }
