--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -1676,6 +1676,13 @@
 					[min]="5"
 					[max]="1000"
 				></ss-lib-number-picker>
+
+				<ss-lib-number-picker
+					[size]="ExtraSize.md"
+					[formControl]="numberPickerCtrl"
+					[min]="5"
+					[max]="1000"
+				></ss-lib-number-picker>
 			</div>
 		</div>
 
@@ -1955,7 +1962,63 @@
 				[icon]="IconType.Plus"
 				[color]="Colors.IconOnDisabled"
 				[tooltipText]="'Это тултип'"
+				[position]="TooltipPosition.TopLeft"
+			></ss-lib-icon>
+
+			<ss-lib-icon
+				ss-lib-tooltip
+				[icon]="IconType.Plus"
+				[color]="Colors.IconOnDisabled"
+				[tooltipText]="'Это тултип'"
+				[position]="TooltipPosition.Top"
+			></ss-lib-icon>
+
+			<ss-lib-icon
+				ss-lib-tooltip
+				[icon]="IconType.Plus"
+				[color]="Colors.IconOnDisabled"
+				[tooltipText]="'Это тултип'"
 				[position]="TooltipPosition.TopRight"
+			></ss-lib-icon>
+
+			<ss-lib-icon
+				ss-lib-tooltip
+				[icon]="IconType.Plus"
+				[color]="Colors.IconOnDisabled"
+				[tooltipText]="'Это тултип'"
+				[position]="TooltipPosition.Right"
+			></ss-lib-icon>
+
+			<ss-lib-icon
+				ss-lib-tooltip
+				[icon]="IconType.Plus"
+				[color]="Colors.IconOnDisabled"
+				[tooltipText]="'Это тултип'"
+				[position]="TooltipPosition.BottomRight"
+			></ss-lib-icon>
+
+			<ss-lib-icon
+				ss-lib-tooltip
+				[icon]="IconType.Plus"
+				[color]="Colors.IconOnDisabled"
+				[tooltipText]="'Это тултип'"
+				[position]="TooltipPosition.Bottom"
+			></ss-lib-icon>
+
+			<ss-lib-icon
+				ss-lib-tooltip
+				[icon]="IconType.Plus"
+				[color]="Colors.IconOnDisabled"
+				[tooltipText]="'Это тултип'"
+				[position]="TooltipPosition.BottomLeft"
+			></ss-lib-icon>
+
+			<ss-lib-icon
+				ss-lib-tooltip
+				[icon]="IconType.Plus"
+				[color]="Colors.IconOnDisabled"
+				[tooltipText]="'Это тултип'"
+				[position]="TooltipPosition.Left"
 			></ss-lib-icon>
 		</div>
 	</div>
