--- a/projects/front-components/src/lib/components/right-side-page-popup/right-side-page-popup.component.html
+++ b/projects/front-components/src/lib/components/right-side-page-popup/right-side-page-popup.component.html
@@ -18,8 +18,11 @@
 	>
 		<ng-container *ngTemplateOutlet="contentRef()"></ng-container>
 	</div>
-	<div class="ss-lib-right-side-page-popup__footer">
-		<ss-lib-divider *ngIf="contentRef()"></ss-lib-divider>
+	<div
+		*ngIf="actionsRef()"
+		class="ss-lib-right-side-page-popup__footer"
+	>
+		<ss-lib-divider></ss-lib-divider>
 		<div
 			*ngIf="actionsRef()"
 			class="ss-lib-right-side-page-popup__actions"
