feature/3916-lib-components: fix gap on action bar item

--- a/projects/front-components/src/lib/components/action-bar/action-bar-item/action-bar-item.component.html
+++ b/projects/front-components/src/lib/components/action-bar/action-bar-item/action-bar-item.component.html
@@ -10,13 +10,15 @@
 }
 
 @if (text()) {
-	<ss-lib-text
-		[type]="sizeConfig().textType"
-		[weight]="TextWeight.Medium"
-		[color]="textColor()"
-	>
-		{{ text() }}
-	</ss-lib-text>
+	<div class="action-bar-item__text">
+		<ss-lib-text
+			[type]="sizeConfig().textType"
+			[weight]="TextWeight.Medium"
+			[color]="textColor()"
+		>
+			{{ text() }}
+		</ss-lib-text>
+	</div>
 }
 
 @if (rightIconConfig()) {
