feature/3916-lib-components: add description to action bar on stand

--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -2027,7 +2027,10 @@
 	<div class="section">
 		<h2 class="section-title">Action bar</h2>
 
-		<p class="section-description">Action bar.</p>
+		<p class="section-description">
+			A customizable panel for displaying interactive action items with
+			support for various sizes and optional close functionality.
+		</p>
 
 		<div class="component-row">
 			<ss-lib-action-bar [size]="ExtraSize.xxs">
