feature/3916-lib-components: add isDestructive

--- a/projects/front-components/src/lib/components/action-bar/action-bar-item/action-bar-item.component.html
+++ b/projects/front-components/src/lib/components/action-bar/action-bar-item/action-bar-item.component.html
@@ -4,7 +4,12 @@
 		[width]="sizeConfig().iconSize"
 		[icon]="leftIconConfig()!.icon"
 		[color]="
-			state() | mapper: getIconColor : type() : leftIconConfig()!.color!
+			state()
+				| mapper
+					: getIconColor
+					: type()
+					: leftIconConfig()!.color!
+					: isDestructive()
 		"
 	></ss-lib-icon>
 }
@@ -27,7 +32,12 @@
 		[width]="sizeConfig().iconSize"
 		[icon]="rightIconConfig()!.icon"
 		[color]="
-			state() | mapper: getIconColor : type() : rightIconConfig()!.color!
+			state()
+				| mapper
+					: getIconColor
+					: type()
+					: rightIconConfig()!.color!
+					: isDestructive()
 		"
 	></ss-lib-icon>
 }
