feature/form-field: add custom size of clear button to form-field

--- a/projects/front-components/src/lib/components/form-field/form-field.component.html
+++ b/projects/front-components/src/lib/components/form-field/form-field.component.html
@@ -64,7 +64,7 @@
 			<div class="field-container__content_right">
 				@if (viewClearButton) {
 					<ss-lib-close-button
-						[size]="closeButtonSize()"
+						[size]="computedClearButtonSize()!"
 						(click)="clearControl()"
 					></ss-lib-close-button>
 				}
