feature/fix-tooltip-index: add custom size of clear button to form-field

--- a/projects/front-components/src/lib/components/number-picker/number-picker.component.scss
+++ b/projects/front-components/src/lib/components/number-picker/number-picker.component.scss
@@ -4,7 +4,7 @@
 }
 
 .number-picker {
-	width: 148px;
+	width: 100%;
 	display: flex;
 	align-items: center;
 	border-radius: var(--border-radius-md);
