--- a/projects/front-components/src/lib/components/status-icon/status-icon.component.scss
+++ b/projects/front-components/src/lib/components/status-icon/status-icon.component.scss
@@ -1,3 +1,9 @@
+:host {
+	display: flex;
+	align-items: center;
+	max-width: fit-content;
+}
+
 .status-icon:focus-visible {
 	outline: none;
 	box-shadow: var(--focus-rings-focus-ring);
